# GDH2

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
docs/: PROJETO.md
docs/guardiao_das_horas_2_0/: 00_documento_mestre.md  01_registro_de_artefatos.md  02_anexos_requisitos.md  03_anexos_governanca.md  04_anexos_arquitetura_e_dados.md  05_anexos_codigo_e_bootstrap.md  README.md
src/gdh2/: __init__.py  settings.py
src/gdh2/application/: __init__.py
src/gdh2/db/: session.py
src/gdh2/domain/: __init__.py
src/gdh2/infra/: __init__.py
src/gdh2/infra/models/: __init__.py
src/gdh2/web/: app.py
tests/: conftest.py  test_health.py
